--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "eslint-plugin-react": "^7.11.1",
     "babel-eslint": "^10.0.1",
     "eslint-config-defaults": "^9.0.0",
-    "puppeteer": "^1.9.0",
-    "nock": "^10.0.1",
-    "puppeteer-core": "^1.9.0"
+    "nock": "^10.0.1"
   }
 }
